<resources>
    <string name="app_name" translatable="false">Weather</string>

    <!--    Search Input error-->
    <string name="search_input_error_empty">Search input cannot be empty</string>
    <string name="search_input_error_too_many_params">Search criteria allows max 3 parameters</string>
    <string name="search_input_error_no_param_found">Insert a meaningful city</string>

    <!--    Search result error-->
    <string name="search_error_no_internet">Missing connectivity, No Internet</string>
    <string name="search_error_not_found">Weather for the location \"%1$s\" not found. Please check that the city is correct.</string>
    <string name="search_error_generic">An error has occurred, retry later</string>
    <string name="search_error_permission_denied">Location permissions denied</string>

    <string name="city_name_state_country_hint">Insert the location</string>

    <string name="feels_like">Feels Like</string>
    <string name="Pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="welcome_title">What\'s the weather like? \nTo start type the name of the location</string>
    <string name="welcome_message">For example \"Huntsville\"\nor \"Huntsville, tx, us\"</string>
    <string name="max">Max</string>
    <string name="min">Min</string>

</resources>